updated for html report